RESOLVED FIXED142395
Don't use dispatch_semaphore in NetworkCacheStorage
https://bugs.webkit.org/show_bug.cgi?id=142395
Summary Don't use dispatch_semaphore in NetworkCacheStorage
Antti Koivisto
Reported 2015-03-06 06:44:40 PST
Less platform code
Attachments
patch (4.90 KB, patch)
2015-03-06 06:49 PST, Antti Koivisto
andersca: review+
Antti Koivisto
Comment 1 2015-03-06 06:49:07 PST
WebKit Commit Bot
Comment 2 2015-03-06 06:50:27 PST
Attachment 248062 [details] did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheIOChannel.h:45: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheIOChannelCocoa.mm:78: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheIOChannelCocoa.mm:98: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2015-03-06 09:31:42 PST
Note You need to log in before you can comment on or make changes to this bug.