Don't use dispatch_semaphore in NetworkCacheStorage https://bugs.webkit.org/show_bug.cgi?id=142395

Reviewed by Anders Carlsson.

* NetworkProcess/cache/NetworkCacheIOChannel.h:
* NetworkProcess/cache/NetworkCacheIOChannelCocoa.mm:
(WebKit::NetworkCache::IOChannel::read):
(WebKit::NetworkCache::IOChannel::readSync):

    Add readSync to encapsulate the semaphore.

* NetworkProcess/cache/NetworkCacheStorageCocoa.mm:
(WebKit::NetworkCache::Storage::traverse):



Canonical link: https://commits.webkit.org/160445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181161 268f45cc-cd09-0410-ab3c-d52691b4dbfc